tools:::print.Rd. See code in etc/parseRd.R

Try to get more tests working: R CMD check and Rd conversion to
doclist checks.

Rd generation for attrSetter<- functions?

Functions with {} as default arguments => error. See
etc/default-function.R

2013.9.3 copy utils code to utils.R so we do not have to use utils:::
and so we can now pass R CMD check for R-devel on CRAN.

2013.8.22 citation for JSS paper.

2013.7.23 citation bugfix and if(interactive()) in
package.skeleton.dx() examples to reduce check time.

== 1.9.3 --- 6 March 2013

Rd generation for "[.class" as in quadmod... this currently works but
since when?

== 1.9.2 --- 28 Jan 2013

Pierre Neuvial reports that concatenating files with comments at the
last line sometimes results in unexpected documentation associated
with the first object defined in the next file. Thus now we issue a
warning whenever there is a comment on the last line of an .R file.

check for existence of files in removeAliasesfrom.Rd.file, since they
sometimes will not exist due to do.not.generate.

== 1.9.1 --- 21 May 2012

use --as-cran for tests!

R CMD check --as-cran inlinedocs_1.9.tar.gz had 
* checking Rd cross-references ... WARNING
... this seems to be related to \link{} tags in Rd?
... or some strange bug in R CMD check?
https://bugs.r-project.org/bugzilla3/show_bug.cgi?id=14875

pause for 4 seconds in example for do.not.generate. On windows the
filesystem records mtimes with a resolution of 2 seconds, so if we
want to see that a file has changed we need to wait at least this
long.

== 1.9 --- 13 Jan 2012 -> 5 April 2012

move code for generating a DESCRIPTION file into package.skeleton.dx.

doc bugfix for some \code{} chunks in inlinedocs that were
disappearing.

Added inst/silly/NAMESPACE to avoid warnings on package check, and
copy this over to all the mini test packages that are created for each
of the inst/testfiles.

Use \s space instead of \W in regexp for "delete empty sections to