@@ -17,7 +17,7 @@ parse for documentation.}
 
 \value{named list of lists, one for each object to document.}
 
-\author{Inlinedocs development team with contributions from R Core Team}
+\author{Toby Dylan Hocking <toby@sg.cs.titech.ac.jp> [aut, cre], Keith Ponting [aut], Thomas Wutzler [aut], Philippe Grosjean [aut], Markus Müller [aut], R Core Team [ctb, cph]}
 
 
 
