@@ -31,7 +31,7 @@ generic function definitions)}
 
 
 
-\author{Inlinedocs development team with contributions from R Core Team}
+\author{Toby Dylan Hocking <toby@sg.cs.titech.ac.jp> [aut, cre], Keith Ponting [aut], Thomas Wutzler [aut], Philippe Grosjean [aut], Markus Müller [aut], R Core Team [ctb, cph]}
 
 
 
